--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "gpa-0.9.10.tar.bz2": c629348725c1bf5dafd57f8a70187dc89815ce60
+  gpa-0.10.0.tar.bz2: 61475989acd12de8b7daacd906200e8b4f519c5a
